<resources>
    <string name="app_name">mathmatical</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parentheses">( )</string>
    <string name="divide">÷</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>

    <string name="backspace"> </string>
    <string name="display">Enter in a value</string>
    <string name="sad">+sad</string>
    <string name="calculate">Calculate</string>
    <string name="radius"> Radius</string>
    <string name="area"> Area =</string>
    <string name="perimeter"> Perimeter =</string>
    <string name="width">  Width </string>
    <string name="height">  Height </string>
    <string name="side"> Side </string>
    <string name="aside"> Side a</string>
    <string name="bside"> Side b</string>
    <string name="cside"> Side c</string>


</resources>