<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00073C">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00073C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00073C">

            <Button
                android:id="@+id/clearBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#5E03FF"
                android:onClick="clearBtn"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/parenthesesBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="parenthesesBtn"
                android:text="@string/parentheses"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/exponentBtn"
                style="@style/Btnall"
                android:backgroundTint="#3B00A3"
                android:onClick="exponentBtn"
                android:text="@string/exponent"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3" />

            <Button
                android:id="@+id/divideBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="divideBtn"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00073C">

            <Button
                android:id="@+id/sevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="sevenBtn"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="eightBtn"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="nineBtn"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="multiplyBtn"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00073C">

            <Button
                android:id="@+id/fourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="fourBtn"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="fiveBtn"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="sixBtn"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtractBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="subtractBtn"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00073C">

            <Button
                android:id="@+id/oneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="oneBtn"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="twoBtn"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="threeBtn"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/addBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="addBtn"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00073C">

            <Button
                android:id="@+id/plusMinusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="plusMinusBtn"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="zeroBtn"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/pointBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#3B00A3"
                android:onClick="pointBtn"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textColorHighlight="#3B00A3"
                android:textColorLink="#3B00A3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalsBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="70dp"
                android:background="@drawable/circle"
                android:backgroundTint="#5E03FF"
                android:onClick="equalsBtn"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="416dp"
        android:layout_height="171dp"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:background="#00073C"
        android:hint="Enter in a value"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="#5C6FD8"
        android:textColorHint="#5C6FD8"
        android:textIsSelectable="false"
        android:textSize="36sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/backspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/circle"
        android:backgroundTint="#5E03FF"
        android:contentDescription="@string/backspace"
        android:onClick="backspace"
        android:text="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backsplace" />

</androidx.constraintlayout.widget.ConstraintLayout>