<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00073C">

    <ImageButton
        android:id="@+id/TriangleIcon"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:background="@drawable/bachg_btn"
        android:onClick="TriangleBtn"
        android:src="@mipmap/trianglesa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/SideBTextView_Triangle"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/bside"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/SideCTextView_Triangle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/SideBEdetText_Triangle"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/SideCEdetText_Triangle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/SideAEdetText_Triangle"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/SideBEdetText_Triangle"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/SideATextView_Triangle"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/aside"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/SideBTextView_Triangle"
        app:layout_constraintEnd_toStartOf="@+id/RadiusEditText_Circile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/AreaTextView_Triangle"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:freezesText="true"
        android:gravity="left|center_vertical"
        android:text="@string/area"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/PerimeterTextView_Triangle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/SideCEdetText_Triangle"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/AreaTextView_Triangle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/PerimeterTextView_Triangle"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:freezesText="true"
        android:gravity="left|center_vertical"
        android:text="@string/perimeter"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/CalculateBtn_Triangle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/SideCTextView_Triangle"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/cside"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/AreaTextView_Triangle"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/CalculateBtn_Triangle"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/circle"
        android:backgroundTint="#5C6FD8"
        android:elegantTextHeight="true"
        android:freezesText="true"
        android:inputType="none"
        android:onClick="CalculateBtn_Triangle"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>