<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00073C">

    <ImageButton
        android:id="@+id/RectangleIcon"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:background="@drawable/bachg_btn"
        android:backgroundTintMode="add"
        android:contentDescription="TODO"
        android:hapticFeedbackEnabled="true"
        android:onClick="RectangleBtn"
        android:src="@drawable/rectangle_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck"
        tools:srcCompat="@drawable/rectangle_btn" />

    <Button
        android:id="@+id/CalculateBtn_Rectangle"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/circle"
        android:backgroundTint="#5C6FD8"
        android:elegantTextHeight="true"
        android:freezesText="true"
        android:inputType="none"
        android:onClick="CalculateBtn_Rectangle"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PerimeterTextView_Rectangle" />

    <TextView
        android:id="@+id/PerimeterTextView_Rectangle"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:freezesText="true"
        android:gravity="left|center_vertical"
        android:text="@string/perimeter"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AreaTextView_Rectangle" />

    <TextView
        android:id="@+id/AreaTextView_Rectangle"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:freezesText="true"
        android:gravity="left|center_vertical"
        android:text="@string/area"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeightEditText_Rectangle" />

    <EditText
        android:id="@+id/HeightEditText_Rectangle"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WidthEditText_Rectangle"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/WidthEditText_Rectangle"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/HeightTextView_Rectangle"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/RadiusEditText_Circile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WidthTextView_Rectangle" />

    <TextView
        android:id="@+id/WidthTextView_Rectangle"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/box_layout"
        android:backgroundTint="#5C6FD8"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/width"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/RadiusEditText_Circile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>